# opengl_experiment

./: CMakeLists.txt  README
include/: BasicShapes.h  Camera.h  Light.h  Mesh.h  Shader.h  Transformations.h  Vect3.h  World.h
include/glad/: glad.h
shaders/: vertex_shader1.vs  with_light.frag  with_light.fs  with_light.vert  with_light.vs
src/: World.cpp  draw.cpp  glad.c  window.cpp
